--- a/src/container_1.css
+++ b/src/container_1.css
@@ -1,13 +1,13 @@
 #container_1 {
     width: 100%;
-    height: 500px;
+    height: 600px;
     background-color: rgb(60, 62, 63); /*삭제*/
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-
 }
 
+#container_1 ul {
+    text-align: center;
+    padding-top: 78px;
+}
 
 .img{
     width: 250px;
@@ -22,6 +22,7 @@
 .introduce p {
     font-size: 30px;
     color: white;
+    margin-top: 3%;
 }
 
 .introduce span {
