--- a/src/header.css
+++ b/src/header.css
@@ -16,6 +16,7 @@ header ul {
     position: fixed;
     right: 0;
     opacity: 0.7;
+    z-index: 999;
 }
 header ul:hover{
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
