--- a/src/container_2.css
+++ b/src/container_2.css
@@ -1,6 +1,47 @@
 #container_2 {
     background-color: aqua;
     color: black;
-    z-index: 9999;
-    height: 30000px;
+    height: 100vh; /*사실 핵심임*/
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    position: relative;
+}
+
+#container_2 p {
+    position: absolute;
+    font-size: 100px;
+    z-index: 2;
+    top: 10%;
+}
+
+
+#container_2 ul{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    width: 100%;
+}
+
+
+#container_2 img {
+    width: 100%;
+    height: 140px;
+    border-radius: 10px;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    transform: rotate(90deg);
+    object-fit: cover;
+    flex: 1;
+
+}
+
+#container_2  li > a > img:hover{
+    width: 100%;
+    margin: auto;
+    transition: 0.5s;
+    height: 30vh;
+    transform: rotate(0deg);
 }
