--- a/src/header.css
+++ b/src/header.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    scroll-behavior: smooth;
 }
 
 header ul {
@@ -9,7 +10,8 @@ header ul {
     margin-right: 40px;
     justify-content: space-around;
     background-color: black;
-    width: 600px;
+    max-width: 100%;
+    width: 40%;
     height: 50px;
     align-items: center;
     border-radius: 0 0 15px 15px;
