--- a/src/container_1.css
+++ b/src/container_1.css
@@ -1,13 +1,19 @@
 #container_1 {
     width: 100%;
-    height: 600px;
+    height: 100vh; /*중요!*/
     background-color: rgb(60, 62, 63); /*삭제*/
+   
 }
 
-#container_1 ul {
+#container_1 > ul {
     text-align: center;
-    padding-top: 78px;
+    padding-top: 200px;
+    max-height: 100%;
+    height: 60%;
+    margin: auto;
 }
+
+
 
 .img{
     width: 250px;
@@ -15,10 +21,7 @@
     border-radius: 50%;
 }
 
-.introduce {
-    text-align: center;
-    line-height: 80px;
-}
+
 .introduce p {
     font-size: 30px;
     color: white;
